--- a/SimpleFileServer/Views/Show.html
+++ b/SimpleFileServer/Views/Show.html
@@ -1,12 +1,7 @@
-@{
-Layout = null;
-}
- 
 <!DOCTYPE html>
- 
 <html>
 <head>
-	<meta name="viewport" content="text/html; width=device-width; charset=UTF-8" />
+	<meta charset="utf-8"/>
 	<title></title>
 </head>
 <body>
